[gd_scene load_steps=6 format=2]

[ext_resource path="res://Textures/UI/TextWindow/WindowSkin.png" type="Texture" id=1]
[ext_resource path="res://GUI/Investment_UI.tres" type="Theme" id=2]
[ext_resource path="res://GUI/InvestmentContainer.gd" type="Script" id=4]
[ext_resource path="res://GUI/Investment_UI.gd" type="Script" id=5]
[ext_resource path="res://GUI/InvestButton.tscn" type="PackedScene" id=6]

[node name="InvestmentGUI" type="CanvasLayer"]
pause_mode = 2

[node name="Investment_UI" type="Control" parent="." groups=[
"GUI",
]]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Investment_UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="InvestmentContainer" type="NinePatchRect" parent="Investment_UI/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 210.0
rect_min_size = Vector2( 0, 210 )
hint_tooltip = "
"
mouse_filter = 1
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Investment_UI/VBoxContainer/InvestmentContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 20.0
margin_right = -717.0
margin_bottom = -120.0
text = "START InVESTMEnT?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="Investment_UI/VBoxContainer/InvestmentContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 713.794
margin_top = 22.3784
margin_right = -33.2061
margin_bottom = -117.622
text = "TIME LEFT "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsLabel" type="Label" parent="Investment_UI/VBoxContainer/InvestmentContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 245.247
margin_top = 110.38
margin_right = -501.754
margin_bottom = -29.6203
text = "Coins = 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvestButton" parent="Investment_UI/VBoxContainer/InvestmentContainer" instance=ExtResource( 6 )]
hint_tooltip = "get 100 coins in 5 sec"

[node name="ClaimButton" type="Button" parent="Investment_UI/VBoxContainer/InvestmentContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1067.29
margin_top = 111.265
margin_right = -44.7057
margin_bottom = -11.735
text = "claim"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="Investment_UI/VBoxContainer/InvestmentContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 52.0
margin_top = 117.0
margin_right = -464.0
margin_bottom = -29.0
rect_min_size = Vector2( 0, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Investment_UI/VBoxContainer/InvestmentContainer"]
one_shot = true

[node name="InvestmentContainer2" type="NinePatchRect" parent="Investment_UI/VBoxContainer"]
margin_top = 214.0
margin_right = 1280.0
margin_bottom = 424.0
rect_min_size = Vector2( 0, 210 )
mouse_filter = 1
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
invest_coins = 3000
time = 60

[node name="Label" type="Label" parent="Investment_UI/VBoxContainer/InvestmentContainer2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 20.0
margin_right = -717.0
margin_bottom = -120.0
text = "START InVESTMEnT?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="Investment_UI/VBoxContainer/InvestmentContainer2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 713.794
margin_top = 22.3784
margin_right = -33.2061
margin_bottom = -117.622
text = "TIME LEFT "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsLabel" type="Label" parent="Investment_UI/VBoxContainer/InvestmentContainer2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 245.247
margin_top = 110.38
margin_right = -501.754
margin_bottom = -29.6203
text = "Coins = 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvestButton" parent="Investment_UI/VBoxContainer/InvestmentContainer2" instance=ExtResource( 6 )]

[node name="HoverDescription" parent="Investment_UI/VBoxContainer/InvestmentContainer2/InvestButton" index="0"]
description = "get 3000 coins in 1 min"

[node name="ClaimButton" type="Button" parent="Investment_UI/VBoxContainer/InvestmentContainer2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1067.29
margin_top = 111.265
margin_right = -44.7057
margin_bottom = -11.735
text = "claim"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="Investment_UI/VBoxContainer/InvestmentContainer2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 52.0
margin_top = 117.0
margin_right = -464.0
margin_bottom = -29.0
rect_min_size = Vector2( 0, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Investment_UI/VBoxContainer/InvestmentContainer2"]
one_shot = true

[node name="InvestmentContainer3" type="NinePatchRect" parent="Investment_UI/VBoxContainer"]
margin_top = 428.0
margin_right = 1280.0
margin_bottom = 638.0
rect_min_size = Vector2( 0, 210 )
mouse_filter = 1
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
invest_coins = 200
time = 120

[node name="Label" type="Label" parent="Investment_UI/VBoxContainer/InvestmentContainer3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 20.0
margin_right = -717.0
margin_bottom = -120.0
text = "START InVESTMEnT?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="Investment_UI/VBoxContainer/InvestmentContainer3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 713.794
margin_top = 22.3784
margin_right = -33.2061
margin_bottom = -117.622
text = "TIME LEFT "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsLabel" type="Label" parent="Investment_UI/VBoxContainer/InvestmentContainer3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 245.247
margin_top = 110.38
margin_right = -501.754
margin_bottom = -29.6203
text = "Coins = 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvestButton" parent="Investment_UI/VBoxContainer/InvestmentContainer3" instance=ExtResource( 6 )]

[node name="ClaimButton" type="Button" parent="Investment_UI/VBoxContainer/InvestmentContainer3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1067.29
margin_top = 111.265
margin_right = -44.7057
margin_bottom = -11.735
text = "claim"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="Investment_UI/VBoxContainer/InvestmentContainer3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 52.0
margin_top = 117.0
margin_right = -464.0
margin_bottom = -29.0
rect_min_size = Vector2( 0, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Investment_UI/VBoxContainer/InvestmentContainer3"]
one_shot = true

[node name="HBoxContainer" type="HBoxContainer" parent="Investment_UI/VBoxContainer"]
margin_top = 642.0
margin_right = 1280.0
margin_bottom = 729.0

[node name="TextboxPanel" type="Panel" parent="Investment_UI/VBoxContainer/HBoxContainer"]
margin_right = 1140.0
margin_bottom = 87.0
rect_min_size = Vector2( 1140, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextboxLabel" type="Label" parent="Investment_UI/VBoxContainer/HBoxContainer/TextboxPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -8.0
margin_right = -8.0
margin_bottom = 9.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="Investment_UI/VBoxContainer/HBoxContainer"]
margin_left = 1144.0
margin_right = 1240.0
margin_bottom = 87.0
rect_min_size = Vector2( 40, 50 )
text = "back"
align = 0
[connection signal="pressed" from="Investment_UI/VBoxContainer/InvestmentContainer/InvestButton" to="Investment_UI/VBoxContainer/InvestmentContainer" method="_on_InvestButton_pressed"]
[connection signal="pressed" from="Investment_UI/VBoxContainer/InvestmentContainer/ClaimButton" to="Investment_UI/VBoxContainer/InvestmentContainer" method="_on_ClaimButton_pressed"]
[connection signal="timeout" from="Investment_UI/VBoxContainer/InvestmentContainer/Timer" to="Investment_UI/VBoxContainer/InvestmentContainer" method="_on_Timer_timeout"]
[connection signal="pressed" from="Investment_UI/VBoxContainer/InvestmentContainer2/InvestButton" to="Investment_UI/VBoxContainer/InvestmentContainer2" method="_on_InvestButton_pressed"]
[connection signal="pressed" from="Investment_UI/VBoxContainer/InvestmentContainer2/ClaimButton" to="Investment_UI/VBoxContainer/InvestmentContainer2" method="_on_ClaimButton_pressed"]
[connection signal="timeout" from="Investment_UI/VBoxContainer/InvestmentContainer2/Timer" to="Investment_UI/VBoxContainer/InvestmentContainer2" method="_on_Timer_timeout"]
[connection signal="pressed" from="Investment_UI/VBoxContainer/InvestmentContainer3/InvestButton" to="Investment_UI/VBoxContainer/InvestmentContainer3" method="_on_InvestButton_pressed"]
[connection signal="pressed" from="Investment_UI/VBoxContainer/InvestmentContainer3/ClaimButton" to="Investment_UI/VBoxContainer/InvestmentContainer3" method="_on_ClaimButton_pressed"]
[connection signal="timeout" from="Investment_UI/VBoxContainer/InvestmentContainer3/Timer" to="Investment_UI/VBoxContainer/InvestmentContainer3" method="_on_Timer_timeout"]
[connection signal="pressed" from="Investment_UI/VBoxContainer/HBoxContainer/BackButton" to="Investment_UI" method="_on_BackButton_pressed"]

[editable path="Investment_UI/VBoxContainer/InvestmentContainer/InvestButton"]

[editable path="Investment_UI/VBoxContainer/InvestmentContainer2/InvestButton"]
